--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -94,8 +94,14 @@
 
 }
 
-.commentForm button[type = submit]:hover {
+.commentForm button[type = submit]:not(:disabled):hover {
     background-color: var(--green-300);
+}
+
+.commentForm button:disabled {
+    background-color: var(--gray-400);
+    opacity: 0.7;
+    cursor: not-allowed;
 }
 
 .commentForm footer {
